--- a/Source/RollerBallEditor/RollerBallEditor/en.lproj/MainMenu.xib
+++ b/Source/RollerBallEditor/RollerBallEditor/en.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -545,6 +545,18 @@
                                     <action selector="deselectAllNodes:" target="581" id="1682"/>
                                 </connections>
                             </menuItem>
+                            <menuItem isSeparatorItem="YES" id="WNo-KS-ilx"/>
+                            <menuItem title="Lock Selection" keyEquivalent="L" id="DuJ-mi-EMx">
+                                <connections>
+                                    <action selector="lockSelection:" target="581" id="Avp-jE-Lso"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Unlock Selection" keyEquivalent="L" id="Y2F-iz-eOL">
+                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
+                                <connections>
+                                    <action selector="unlockSelection:" target="581" id="VjZ-Zh-VWr"/>
+                                </connections>
+                            </menuItem>
                             <menuItem isSeparatorItem="YES" id="1684"/>
                             <menuItem title="Remove Degenerated Nodes" id="1683">
                                 <modifierMask key="keyEquivalentModifierMask"/>
@@ -857,7 +869,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <popUpButtonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="736">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
+                                <font key="font" metaFont="menu"/>
                                 <menu key="menu" title="OtherViews" id="737"/>
                             </popUpButtonCell>
                         </popUpButton>
