Now I can phase through platforms!

--- a/Source/RollerBallEditor/RollerBallEditor/PerformAction.xib
+++ b/Source/RollerBallEditor/RollerBallEditor/PerformAction.xib
@@ -63,10 +63,10 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="0WW-Hp-F9k">
                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
+                            <font key="font" metaFont="menu"/>
                             <menu key="menu" title="OtherViews" id="i88-sW-pgk">
                                 <items>
-                                    <menuItem title="Select" state="on" id="hjf-RH-8mA">
+                                    <menuItem title="Select" id="hjf-RH-8mA">
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                     </menuItem>
                                     <menuItem title="Add To Selection" tag="1" id="aOv-Oe-nnR">
@@ -85,6 +85,9 @@
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                     </menuItem>
                                     <menuItem title="Unhide" tag="6" id="BoO-2P-oR3">
+                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                    </menuItem>
+                                    <menuItem title="Remove" tag="7" id="r0y-Uv-Wid">
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                     </menuItem>
                                 </items>
